# face-occurance-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  handler.py  lambda.py  pyproject.toml  requirements.txt  test_input.json
.github/workflows/: build-and-push.yml
migrations/: 001_videos.sql  002_video_match_targets.sql
src/face_occurrence_detector/: __init__.py  chunking.py  cli.py  config.py  insightface_matcher.py  output.py  pipeline.py  timeline.py  types.py  verification.py  video_reader.py
